# PointCloudProcessor

./: .gitignore  CMakeLists.txt  README.md  cloud_helpers.hpp  pcd_read.cpp  point_cloud_processor_engine.hpp  point_cloud_visualization_manager.hpp
common/include/: cloud_helpers.hpp  point_cloud_processor_engine.hpp  point_cloud_visualization_manager.hpp
pcd_reader/: CMakeLists.txt  README.md  parameters.txt
pcd_reader/src/: pcd_read.cpp
ros_pcl_visualizer/: CMakeLists.txt  README.md  package.xml  parameters.txt
ros_pcl_visualizer/include/ros_pcl_visualizer/: point_cloud_subscriber_node.hpp
ros_pcl_visualizer/src/: point_cloud_subscriber_node.cpp
